@@ -889,6 +889,11 @@ cmd_fix(void)
       }
 
       if (pcs->proj && proj_out) {
+	 if (pj_is_latlong(pcs->proj)) {
+	    /* PROJ expect lat and long in radians. */
+	    x = rad(x);
+	    y = rad(y);
+	 }
 	 int r = pj_transform(pcs->proj, proj_out, 1, 1, &x, &y, &z);
 	 if (r != 0) {
 	    compile_error(/*Failed to convert coordinates*/436);
