@@ -112,5 +112,6 @@ doubleinc.out doubleinc.svx\
 reenterlots.out reenterlots.svx\
 cs.out cs.svx\
 csbad.out csbad.svx\
+cslonglat.out cslonglat.svx\
 omitfixaroundsolve.out omitfixaroundsolve.svx\
 repeatreading.svx repeatreading.out repeatreading.pos
